fix video stretch

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@ body {
   }
 
   .canvas {
+    object-fit: cover;
     position: relative;
     width: 100%;
     height: 100%;
